[gd_scene load_steps=2 format=3 uid="uid://da7g2f2kxu5lv"]

[ext_resource type="Script" path="res://scripts/hud/hud.gd" id="1_3ky3g"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ky3g")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score: 0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Retry"

[node name="HighScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Highscore: 0"

[node name="Hitpoints" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -40.0
offset_right = 16.0
offset_bottom = -40.0
grow_vertical = 0

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
